setting db di env

--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pengaduan_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=pengaduandb
+DB_USERNAME=userpengaduan
+DB_PASSWORD=userpengaduan
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
